# gb_opcodes_generator

./: Cargo.toml  a.txt  gbops.html  opcodes.json  opcodes_cb.json  opcodes_non_cb.json  opcodes_non_cb_test.json  scrap_cb.txt  scrap_non_cb.txt
src/: generator.rs  html_scraper.rs  main.rs  opcode.pest  opcode_data.rs  pest_parser.rs
templates/: macros.txt  opcode_macros.txt  opcodes.macro  opcodes.rs  opcodes.txt
