[package]
name = "gb_opcode_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.5.7"
pest_derive = "2.5.7"
scraper = "0.16.0"
serde_json = "1.0.95"
tera = { version = "1", default-features = false }
